# emu198x

./: .gitignore  .markdownlint.jsonc  .markdownlintignore  CLAUDE.md  Cargo.toml  PLAN.md  emu198x-platform-matrix.xlsx
.github/workflows/: amiga-phase1-phase2.yml
07/8e31d75725/: metadata.json
1c/7d885f78d9/: metadata.json
27/2d31d1ec70/: metadata.json
2c/f7335e2fb1/: metadata.json
4b/29eed28204/: metadata.json
54/57421b60ef/: metadata.json
56/751471d130/: metadata.json
c64-runner/: Cargo.toml
c64-runner/src/: main.rs
core/: Cargo.toml
cpu-6502/: Cargo.toml
cpu-z80/: Cargo.toml
crates/amiga-runner/: Cargo.toml  README.md
crates/amiga-runner/src/: main.rs
crates/commodore-agnus-aga/: Cargo.toml
crates/commodore-agnus-aga/src/: lib.rs
crates/commodore-agnus-ecs/: Cargo.toml
crates/commodore-agnus-ecs/src/: lib.rs
crates/commodore-denise-aga/: Cargo.toml
crates/commodore-denise-aga/src/: lib.rs
crates/commodore-denise-ecs/: Cargo.toml
crates/commodore-denise-ecs/src/: lib.rs
crates/commodore-super-buster/: Cargo.toml
crates/commodore-super-buster/src/: lib.rs
crates/cpu-m68k/: Cargo.toml
crates/cpu-m68k/src/: arith.rs  branches.rs  bus.rs  cpu.rs  decode.rs  ea.rs  exceptions.rs  execute.rs  immediates.rs  lib.rs  logic.rs  microcode.rs  misc.rs  registers.rs  shifts.rs  timing.rs
crates/cpu-m68k/tests/: single_step_tests.rs
crates/emu-6502/: Cargo.toml
crates/emu-6502/src/: cpu.rs  lib.rs  registers.rs
crates/emu-6502/tests/: dormann.rs  instructions.rs  single_step_tests.rs
crates/emu-68000/: Cargo.toml
crates/emu-68000/src/: cpu.rs  flags.rs  lib.rs  microcode.rs  registers.rs
crates/emu-68000/src/cpu/: execute.rs
crates/emu-68000/tests/: instructions.rs  single_step_tests.rs
crates/emu-amiga/: Cargo.toml  README.md
crates/emu-amiga-rock/: Cargo.toml
crates/emu-amiga-rock/src/: agnus.rs  cia.rs  copper.rs  denise.rs  lib.rs  memory.rs  paula.rs
crates/emu-amiga-rock/tests/: boot_kickstart.rs  simple_boot.rs
crates/emu-amiga-wasm/: Cargo.toml  index.html
crates/emu-amiga-wasm/src/: lib.rs
crates/emu-amiga/src/: agnus.rs  amiga.rs  blitter.rs  bus.rs  capture.rs  cia.rs  config.rs  copper.rs  custom_regs.rs  denise.rs  input.rs  keyboard_map.rs  kickstart_db.rs  lib.rs  main.rs  mcp.rs  memory.rs  paula.rs
crates/emu-amiga/tests/: trace_boot.rs
crates/emu-amiga2/: Cargo.toml
crates/emu-amiga2/src/: amiga.rs  blitter.rs  bus.rs  capture.rs  cia.rs  config.rs  copper.rs  custom_regs.rs  input.rs  keyboard.rs  lib.rs  main.rs  memory.rs  paula.rs
crates/emu-amiga2/src/agnus/: beam.rs  dma.rs  mod.rs
crates/emu-amiga2/src/denise/: mod.rs  video.rs
crates/emu-atari-2600/: Cargo.toml
crates/emu-atari-2600-wasm/: Cargo.toml  index.html
crates/emu-atari-2600-wasm/src/: lib.rs
crates/emu-atari-2600/src/: bus.rs  capture.rs  cartridge.rs  config.rs  controller_map.rs  lib.rs  main.rs
crates/emu-atari-2600/tests/: boot_minimal.rs
crates/emu-atari-5200/: Cargo.toml
crates/emu-atari-5200-wasm/: Cargo.toml  index.html
crates/emu-atari-5200-wasm/src/: lib.rs
crates/emu-atari-5200/src/: bus.rs  capture.rs  cartridge.rs  config.rs  controller_map.rs  lib.rs  main.rs
crates/emu-atari-5200/tests/: boot_minimal.rs
crates/emu-atari-7800/: Cargo.toml
crates/emu-atari-7800-wasm/: Cargo.toml  index.html
crates/emu-atari-7800-wasm/src/: lib.rs
crates/emu-atari-7800/src/: bus.rs  capture.rs  cartridge.rs  config.rs  controller_map.rs  lib.rs  main.rs  tia_audio.rs
crates/emu-atari-7800/tests/: boot_minimal.rs
crates/emu-atari-800xl/: Cargo.toml
crates/emu-atari-800xl-wasm/: Cargo.toml  index.html
crates/emu-atari-800xl-wasm/src/: lib.rs
crates/emu-atari-800xl/src/: bus.rs  capture.rs  cartridge.rs  config.rs  input_map.rs  lib.rs  main.rs
crates/emu-bbc-micro/: Cargo.toml
crates/emu-bbc-micro-wasm/: Cargo.toml  index.html
crates/emu-bbc-micro-wasm/src/: lib.rs
crates/emu-bbc-micro/src/: lib.rs  main.rs
crates/emu-c64/: Cargo.toml
crates/emu-c64/src/: bus.rs  c64.rs  capture.rs  cartridge.rs  cia.rs  config.rs  d64.rs  drive1541.rs  drive1541_bus.rs  gcr.rs  iec.rs  input.rs  keyboard.rs  keyboard_map.rs  lib.rs  main.rs  mcp.rs  memory.rs  palette.rs  prg.rs  reu.rs  sid.rs  tap.rs  tape.rs  vic.rs
crates/emu-c64/tests/: boot_kernal.rs  code198x.rs
crates/emu-colecovision/: Cargo.toml
crates/emu-colecovision-wasm/: Cargo.toml  index.html
crates/emu-colecovision-wasm/src/: lib.rs
crates/emu-colecovision/src/: lib.rs  main.rs
crates/emu-core/: Cargo.toml
crates/emu-core/src/: audio.rs  bus.rs  capture.rs  clock.rs  cpu.rs  display.wgsl  lib.rs  machine.rs  mcp.rs  observable.rs  renderer.rs  runner.rs  tickable.rs  ticks.rs  video.rs
crates/emu-m68k/: Cargo.toml
crates/emu-m68k/src/: bus.rs  lib.rs
crates/emu-m68k/src/common/: addressing.rs  alu.rs  conditions.rs  mod.rs  registers.rs
crates/emu-m68k/src/m68000/: decode.rs  ea.rs  exceptions.rs  execute.rs  execute_shift.rs  mod.rs  observable.rs  recipe.rs  timing.rs
crates/emu-m68k/tests/: single_step_tests.rs
crates/emu-msx-wasm/: Cargo.toml  index.html
crates/emu-msx-wasm/src/: lib.rs
docs/: README.md  amiga-hardware-reference-manual-3rd-edition.txt  amiga-rom-kernal-reference-manual-exec.txt  amiga-rom-kernal-reference-manual-includes-and-autodocs.txt  amiga-rom-kernal-reference-manual-libraries-and-devices.txt  amiga-system-programmers-guide.txt  amiga-variants-plan.md  architecture.md  constraints.md  cpu-m68k-plan.md  cpu-state-management.md  decode-rewrite-plan.md  emu198x-amiga-variant-reference.md  emulation-gaps.md  future-systems.md  integration.md  inventory.md  mega65-research.md  milestones.md  roadmap.md  status.md  testing-audit.md  testing-policy.md
machine-c128/: Cargo.toml
machine-c64/: Cargo.toml
machine-nes/: Cargo.toml
machine-spectrum/: Cargo.toml
nes-runner/: Cargo.toml
nes-test-runner/: Cargo.toml
roms/: 48.rom
runner/: Cargo.toml
runner-lib/: Cargo.toml
scripts/: rock_next_instruction.sh  run_amiga_boot_probes.sh
spectrum-runner/: Cargo.toml
(+558 files in other folders)
