[workspace]
resolver = "2"
members = ["crates/*"]
exclude = ["crates/emu-68000", "crates/emu-amiga", "crates/emu-m68k", "crates/emu-amiga2"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/stevehill/emu198x"

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
unwrap_used = "warn"
