[package]
name = "commodore-agnus-aga"
description = "Commodore Alice (AGA Agnus) wrapper over commodore-agnus-ecs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
commodore-agnus-ecs = { path = "../commodore-agnus-ecs" }
commodore-agnus-ocs = { path = "../commodore-agnus-ocs" }

[lints]
workspace = true
