[package]
name = "emu-68000"
description = "Cycle-accurate Motorola 68000 CPU emulator"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
emu-core = { path = "../emu-core" }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glob = "0.3"

[features]
default = []
test-utils = []

[lints]
workspace = true
