[package]
name = "emu-amiga-rock"
version = "0.1.0"
edition = "2021"

[dependencies]
emu-core = { path = "../emu-core" }
motorola-68000 = { path = "../motorola-68000" }
mos-cia-8520 = { path = "../mos-cia-8520" }
commodore-paula-8364 = { path = "../commodore-paula-8364" }
commodore-agnus-ocs = { path = "../commodore-agnus-ocs" }
commodore-denise-ocs = { path = "../commodore-denise-ocs" }

[dev-dependencies]
png = "0.17"

[lib]
name = "emu_amiga_rock"
path = "src/lib.rs"
