[package]
name = "emu-amiga-wasm"
description = "Amiga emulator — WASM/browser build"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
machine-amiga = { path = "../machine-amiga", default-features = false }
wasm-bindgen = "0.2"

[lints]
workspace = true
