[package]
name = "emu-amiga"
description = "Cycle-accurate Amiga 500 emulator"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "emu-amiga"
path = "src/main.rs"

[lib]
name = "emu_amiga"
path = "src/lib.rs"

[dependencies]
emu-core = { path = "../emu-core" }
emu-68000 = { path = "../emu-68000" }
winit = "0.30"
pixels = "0.15"
png = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

[lints]
workspace = true
