[package]
name = "emu-amiga2"
description = "Cycle-accurate Amiga emulator with variant support"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "emu-amiga2"
path = "src/main.rs"

[lib]
name = "emu_amiga2"
path = "src/lib.rs"

[dependencies]
emu-core = { path = "../emu-core" }
emu-m68k = { path = "../emu-m68k" }
winit = "0.30"
pixels = "0.15"
png = "0.17"

[lints]
workspace = true
