[package]
name = "emu-atari-2600"
description = "Cycle-accurate Atari 2600 emulator"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "emu-atari-2600"
path = "src/main.rs"

[lib]
name = "emu_atari_2600"
path = "src/lib.rs"

[dependencies]
emu-core = { path = "../emu-core", features = ["renderer"] }
mos-6502 = { path = "../mos-6502" }
mos-riot-6532 = { path = "../mos-riot-6532" }
atari-tia = { path = "../atari-tia" }
winit = "0.30"
muda = "0.16"
png = "0.17"

[lints]
workspace = true
