[package]
name = "emu-atari-2600"
description = "Cycle-accurate Atari 2600 emulator"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "emu-atari-2600"
path = "src/main.rs"

[lib]
name = "emu_atari_2600"
path = "src/lib.rs"

[features]
default = ["native"]
native = ["emu-core/renderer", "dep:winit", "dep:muda", "dep:png"]

[dependencies]
emu-core = { path = "../emu-core" }
mos-6502 = { path = "../mos-6502" }
mos-riot-6532 = { path = "../mos-riot-6532" }
atari-tia = { path = "../atari-tia" }
winit = { version = "0.30", optional = true }
muda = { version = "0.16", optional = true }
png = { version = "0.17", optional = true }

[lints]
workspace = true
