[package]
name = "emu-atari-5200"
description = "Cycle-accurate Atari 5200 emulator"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "emu-atari-5200"
path = "src/main.rs"

[lib]
name = "emu_atari_5200"
path = "src/lib.rs"

[features]
default = ["native"]
native = ["emu-core/renderer", "dep:winit", "dep:muda", "dep:png"]

[dependencies]
emu-core = { path = "../emu-core" }
mos-6502 = { path = "../mos-6502" }
atari-antic = { path = "../atari-antic" }
atari-gtia = { path = "../atari-gtia" }
atari-pokey = { path = "../atari-pokey" }
winit = { version = "0.30", optional = true }
muda = { version = "0.16", optional = true }
png = { version = "0.17", optional = true }

[lints]
workspace = true
