[package]
name = "emu-atari-7800"
description = "Cycle-accurate Atari 7800 emulator"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "emu-atari-7800"
path = "src/main.rs"

[lib]
name = "emu_atari_7800"
path = "src/lib.rs"

[dependencies]
emu-core = { path = "../emu-core", features = ["renderer"] }
mos-6502 = { path = "../mos-6502" }
atari-maria = { path = "../atari-maria" }
atari-tia = { path = "../atari-tia" }
mos-riot-6532 = { path = "../mos-riot-6532" }
atari-pokey = { path = "../atari-pokey" }
winit = "0.30"
muda = "0.16"
png = "0.17"

[lints]
workspace = true
