[package]
name = "emu-atari-800xl-wasm"
description = "Atari 800XL emulator — WASM/browser build"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
emu-atari-800xl = { path = "../emu-atari-800xl", default-features = false }
emu-core = { path = "../emu-core" }
wasm-bindgen = "0.2"

[lints]
workspace = true
