[package]
name = "emu-atari-800xl"
description = "Cycle-accurate Atari 800XL emulator"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "emu-atari-800xl"
path = "src/main.rs"

[lib]
name = "emu_atari_800xl"
path = "src/lib.rs"

[features]
default = ["native"]
native = ["emu-core/renderer", "dep:winit", "dep:muda", "dep:png"]

[dependencies]
emu-core = { path = "../emu-core" }
mos-6502 = { path = "../mos-6502" }
atari-antic = { path = "../atari-antic" }
atari-gtia = { path = "../atari-gtia" }
atari-pokey = { path = "../atari-pokey" }
mos-pia-6520 = { path = "../mos-pia-6520" }
winit = { version = "0.30", optional = true }
muda = { version = "0.16", optional = true }
png = { version = "0.17", optional = true }

[lints]
workspace = true
