[package]
name = "emu-bbc-micro-wasm"
description = "BBC Micro emulator — WASM/browser build"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
emu-bbc-micro = { path = "../emu-bbc-micro", default-features = false }
emu-core = { path = "../emu-core" }
wasm-bindgen = "0.2"

[lints]
workspace = true
