[package]
name = "emu-c64"
description = "Cycle-accurate Commodore 64 emulator"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "emu-c64"
path = "src/main.rs"

[lib]
name = "emu_c64"
path = "src/lib.rs"

[dependencies]
emu-core = { path = "../emu-core", features = ["mcp", "video"] }
mos-6502 = { path = "../mos-6502" }
mos-cia-6526 = { path = "../mos-cia-6526" }
mos-sid-6581 = { path = "../mos-sid-6581" }
mos-vic-ii = { path = "../mos-vic-ii" }
mos-via-6522 = { path = "../mos-via-6522" }
format-d64 = { path = "../format-d64" }
format-gcr = { path = "../format-gcr" }
format-c64-tap = { path = "../format-c64-tap" }
format-prg = { path = "../format-prg" }
winit = "0.30"
pixels = "0.15"
png = "0.17"
hound = "3.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

[lints]
workspace = true
