[package]
name = "emu-c64"
description = "Cycle-accurate Commodore 64 emulator"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "emu-c64"
path = "src/main.rs"

[lib]
name = "emu_c64"
path = "src/lib.rs"

[features]
default = ["native"]
native = ["emu-core/mcp", "emu-core/video", "emu-core/renderer", "dep:winit", "dep:muda", "dep:png", "dep:hound", "dep:serde", "dep:serde_json", "dep:base64"]

[dependencies]
emu-core = { path = "../emu-core" }
mos-6502 = { path = "../mos-6502" }
mos-cia-6526 = { path = "../mos-cia-6526" }
mos-sid-6581 = { path = "../mos-sid-6581" }
mos-vic-ii = { path = "../mos-vic-ii" }
mos-via-6522 = { path = "../mos-via-6522" }
format-c64-bas = { path = "../format-c64-bas" }
format-d64 = { path = "../format-d64" }
format-gcr = { path = "../format-gcr" }
format-c64-tap = { path = "../format-c64-tap" }
format-prg = { path = "../format-prg" }
winit = { version = "0.30", optional = true }
muda = { version = "0.16", optional = true }
png = { version = "0.17", optional = true }
hound = { version = "3.5", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
base64 = { version = "0.22", optional = true }

[lints]
workspace = true
