[package]
name = "emu-colecovision-wasm"
description = "ColecoVision emulator — WASM/browser build"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
emu-colecovision = { path = "../emu-colecovision", default-features = false }
emu-core = { path = "../emu-core" }
wasm-bindgen = "0.2"

[lints]
workspace = true
