[package]
name = "emu-colecovision"
description = "ColecoVision emulator"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
emu-core = { path = "../emu-core" }
zilog-z80 = { path = "../zilog-z80" }
ti-tms9918 = { path = "../ti-tms9918" }
ti-sn76489 = { path = "../ti-sn76489" }

[lints]
workspace = true
