[package]
name = "emu-colecovision"
description = "ColecoVision emulator"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "emu-colecovision"
path = "src/main.rs"

[lib]
name = "emu_colecovision"
path = "src/lib.rs"

[dependencies]
emu-core = { path = "../emu-core", features = ["renderer"] }
zilog-z80 = { path = "../zilog-z80" }
ti-tms9918 = { path = "../ti-tms9918" }
ti-sn76489 = { path = "../ti-sn76489" }
winit = "0.30"
muda = "0.16"
png = "0.17"

[lints]
workspace = true
