[package]
name = "emu-colecovision"
description = "ColecoVision emulator"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "emu-colecovision"
path = "src/main.rs"

[lib]
name = "emu_colecovision"
path = "src/lib.rs"

[features]
default = ["native"]
native = ["emu-core/renderer", "dep:winit", "dep:muda", "dep:png"]

[dependencies]
emu-core = { path = "../emu-core" }
zilog-z80 = { path = "../zilog-z80" }
ti-tms9918 = { path = "../ti-tms9918" }
ti-sn76489 = { path = "../ti-sn76489" }
winit = { version = "0.30", optional = true }
muda = { version = "0.16", optional = true }
png = { version = "0.17", optional = true }

[lints]
workspace = true
