[package]
name = "emu-core"
description = "Core traits and types for cycle-accurate emulation"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
mcp = ["dep:serde", "dep:serde_json", "dep:base64", "dep:png"]
video = ["dep:openh264", "dep:fdk-aac", "dep:muxide"]
renderer = ["dep:wgpu", "dep:pollster", "dep:winit"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
base64 = { version = "0.22", optional = true }
png = { version = "0.17", optional = true }
openh264 = { version = "0.7", features = ["source"], optional = true }
fdk-aac = { version = "0.8", optional = true }
muxide = { version = "0.2", optional = true }
wgpu = { version = "27", optional = true }
pollster = { version = "0.4", optional = true }
winit = { version = "0.30", optional = true }

[lints]
workspace = true
