[package]
name = "emu-msx-wasm"
description = "MSX1 emulator — WASM/browser build"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
emu-msx = { path = "../emu-msx", default-features = false }
emu-core = { path = "../emu-core" }
wasm-bindgen = "0.2"

[lints]
workspace = true
